build.gradle: add Minotaur configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ maven_group = pl.kosma
 archives_base_name = carpet-flying
 
 # Dependencies
+carpet_mod_version=1.4.101
 carpet_core_version=1.4.101+v230319
