--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'fabric-loom' version '1.1-SNAPSHOT'
+    id "com.modrinth.minotaur" version "2.+"
     id 'maven-publish'
 }
 
@@ -64,5 +65,15 @@ publishing {
     }
 
     repositories {
+    }
+}
+
+modrinth {
+    projectId = project.name
+    uploadFile = remapJar
+    gameVersions = [project.minecraft_version]
+    syncBodyFrom = rootProject.file("README.md").text
+    dependencies {
+        required.version "carpet", project.carpet_mod_version
     }
 }
