build.gradle: add Mod Menu

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ archives_base_name = carpet-flying
 # Dependencies
 carpet_mod_version=1.4.101
 carpet_core_version=1.4.101+v230319
+modmenu_version=6.2.2
