--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ group = project.maven_group
 
 repositories {
     maven { url 'https://masa.dy.fi/maven' }
+    maven { url 'https://maven.terraformersmc.com/' }
 }
 
 dependencies {
@@ -18,6 +19,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "carpet:fabric-carpet:${project.minecraft_version}-${project.carpet_core_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 }
 
 processResources {
