--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.19.4+build.2
 loader_version=0.14.19
 
 # Mod Properties
-mod_version = 1.0-SNAPSHOT
+mod_version = 1.0
 maven_group = pl.kosma
 archives_base_name = carpet-flying
 
