--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.2
-loader_version=0.14.19
+minecraft_version=1.20-pre6
+yarn_mappings=1.20-pre6+build.2
+loader_version=0.14.21
 
 # Mod Properties
 mod_version = 1.0
 maven_group = pl.kosma
 archives_base_name = carpet-flying
+minecraft_dependency = 1.20.x
 
 # Dependencies
-carpet_mod_version=1.4.101
-carpet_core_version=1.4.101+v230319
-modmenu_version=6.2.2
+carpet_mod_version=1.4.111
+carpet_core_version=1.4.111+v230525
+modmenu_version=7.0.0-beta.2
