--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.20-pre6+build.2
 loader_version=0.14.21
 
 # Mod Properties
-mod_version = 1.0
+mod_version = 1.1-SNAPSHOT
 maven_group = pl.kosma
 archives_base_name = carpet-flying
 minecraft_dependency = 1.20.x
